# Path-optimization-for-four-wheeled-robot-using-aerial-image-UNET-Architecture

ML Model/: prediction-aerial-view.ipynb  road-maps-from-aerial-images (1).ipynb
src/robot_control/: package.xml  setup.py
src/robot_control/robot_control/: robot_control.py
