<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="stochlab@todo.todo">stochlab</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>builtin_interfaces</depend>

  <!-- Test dependencies (optional) -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

    <!-- Additional dependencies for Gazebo and RViz visualization -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rviz2</exec_depend>
  
  <!-- System dependencies -->
  <exec_depend>python3</exec_depend>
  <exec_depend>python3-numpy</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
